hago modificaciones a las estructuras y pruebas. termino seccion 1 del cap 5

--- a/doc/latex/Delay.tex
+++ b/doc/latex/Delay.tex
@@ -294,17 +294,14 @@
 \end{code}
 %</equality>
 
-%<*modequality>
+%<*rel>
 \begin{code}%
 \>[0]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{Equality}%
-\>[166I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\AgdaModule{Equality}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaComment{-- The "return type".}\<%
-\\
-\>[.][@{}l@{}]\<[166I]%
-\>[16]\AgdaSymbol{(}\AgdaOperator{\AgdaBound{\AgdaUnderscore{}∼\AgdaUnderscore{}}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaOperator{\AgdaBound{\AgdaUnderscore{}∼\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{A}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
@@ -316,11 +313,6 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[0][@{}l@{\AgdaIndent{0}}]%
-\>[2]\AgdaComment{-- The three relations.}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
 \>[2]\AgdaKeyword{data}\AgdaSpace{}%
 \AgdaDatatype{Rel}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -423,9 +415,11 @@
 \AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaBound{y}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</rel>
+
+%<*op>
+\begin{code}%
 %
 \>[2]\AgdaKeyword{infix}\AgdaSpace{}%
 \AgdaNumber{4}\AgdaSpace{}%
@@ -515,14 +509,11 @@
 \AgdaDatatype{Rel}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{other}\AgdaSpace{}%
 \AgdaInductiveConstructor{weak}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaComment{-- x ⇓ y means that x terminates with y.}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</op>
+
+%<*convergencia>
+\begin{code}%
 %
 \>[2]\AgdaKeyword{infix}\AgdaSpace{}%
 \AgdaNumber{4}\AgdaSpace{}%
@@ -585,11 +576,6 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[2]\AgdaComment{-- x ⇓ means that x terminates.}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
 \>[2]\AgdaKeyword{infix}\AgdaSpace{}%
 \AgdaNumber{4}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{\AgdaUnderscore{}⇓}}\<%
@@ -616,11 +602,6 @@
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{⇓}}\AgdaSpace{}%
 \AgdaBound{v}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaComment{-- x ⇑ means that x does not terminate.}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -675,7 +656,7 @@
 \AgdaInductiveConstructor{weak}\AgdaSpace{}%
 \AgdaOperator{\AgdaFunction{]}}\<%
 \end{code}
-%</modequality>
+%</convergencia>
 
 %<*lemas>
 \begin{code}%
@@ -705,11 +686,6 @@
 %
 \>[2]\AgdaKeyword{open}\AgdaSpace{}%
 \AgdaModule{Equality.Rel}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaComment{-- All relations include strong equality.}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -751,11 +727,6 @@
 \AgdaFunction{≅⇒}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{♭}\AgdaSpace{}%
 \AgdaBound{x≅y}\AgdaSymbol{))}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaComment{-- The weak equality includes the ordering.}\<%
 \\
 %
 \\[\AgdaEmptyExtraSkip]%
@@ -812,11 +783,6 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 %
-\>[2]\AgdaComment{-- Weak equality includes the other relations.}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
 \>[2]\AgdaFunction{⇒≈}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}\AgdaSpace{}%
@@ -855,129 +821,15 @@
 \AgdaInductiveConstructor{weak}\AgdaSymbol{\}}%
 \>[19]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{id}\<%
-\\
+\end{code}
+%</lemas>
+
+%<*inversas>
+\begin{code}%
 %
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaComment{-- The relations agree for non-terminating computations.}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaFunction{never⇒never}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[500I]\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{k₁}\AgdaSpace{}%
-\AgdaBound{k₂}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{x}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⊥}}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-\>[.][@{}l@{}]\<[500I]%
-\>[16]\AgdaDatatype{Rel}\AgdaSpace{}%
-\AgdaBound{k₁}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaFunction{never}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Rel}\AgdaSpace{}%
-\AgdaBound{k₂}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaFunction{never}\<%
-\\
-%
-\>[2]\AgdaFunction{never⇒never}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{later}%
-\>[22]\AgdaBound{x∼never}\AgdaSymbol{)}%
-\>[32]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{later}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaCoinductiveConstructor{♯}}\AgdaSpace{}%
-\AgdaFunction{never⇒never}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaField{♭}\AgdaSpace{}%
-\AgdaBound{x∼never}\AgdaSymbol{))}\<%
-\\
-%
-\>[2]\AgdaFunction{never⇒never}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{laterʳ}\AgdaSpace{}%
-\AgdaBound{x≈never}\AgdaSymbol{)}%
-\>[32]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{never⇒never}\AgdaSpace{}%
-\AgdaBound{x≈never}\<%
-\\
-%
-\>[2]\AgdaFunction{never⇒never}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{laterˡ}\AgdaSpace{}%
-\AgdaBound{x∼never}\AgdaSymbol{)}%
-\>[32]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{later}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaOperator{\AgdaCoinductiveConstructor{♯}}\AgdaSpace{}%
-\AgdaFunction{never⇒never}\AgdaSpace{}%
-\AgdaBound{x∼never}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaComment{-- The "other" relations agree when the right-hand side is a value.}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaFunction{now⇒now}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[533I]\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{k₁}\AgdaSpace{}%
-\AgdaBound{k₂}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{x}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{y}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-\>[.][@{}l@{}]\<[533I]%
-\>[12]\AgdaDatatype{Rel}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{other}\AgdaSpace{}%
-\AgdaBound{k₁}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
-\AgdaBound{y}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Rel}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{other}\AgdaSpace{}%
-\AgdaBound{k₂}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
-\AgdaBound{y}\AgdaSymbol{)}\<%
-\\
-%
-\>[2]\AgdaFunction{now⇒now}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{now}\AgdaSpace{}%
-\AgdaBound{x∼y}\AgdaSymbol{)}%
-\>[26]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{now}\AgdaSpace{}%
-\AgdaBound{x∼y}\<%
-\\
-%
-\>[2]\AgdaFunction{now⇒now}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{laterˡ}\AgdaSpace{}%
-\AgdaBound{x∼now}\AgdaSymbol{)}%
-\>[26]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaInductiveConstructor{laterˡ}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{now⇒now}\AgdaSpace{}%
-\AgdaBound{x∼now}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{------------------------------------------------------------------------}\<%
-\\
-\>[0]\AgdaComment{-- Later can be dropped}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaFunction{laterʳ⁻¹}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[563I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[500I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{k}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -986,7 +838,7 @@
 \AgdaSymbol{\{}\AgdaBound{y}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[563I]%
+\>[.][@{}l@{}]\<[500I]%
 \>[13]\AgdaDatatype{Rel}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{other}\AgdaSpace{}%
 \AgdaBound{k}\AgdaSymbol{)}\AgdaSpace{}%
@@ -1078,7 +930,7 @@
 %
 \>[2]\AgdaFunction{later⁻¹}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[625I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[562I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{k}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{y}\AgdaSpace{}%
@@ -1088,7 +940,7 @@
 \AgdaOperator{\AgdaDatatype{⊥}}\AgdaSymbol{)\}}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[625I]%
+\>[.][@{}l@{}]\<[562I]%
 \>[12]\AgdaDatatype{Rel}\AgdaSpace{}%
 \AgdaBound{k}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaInductiveConstructor{later}\AgdaSpace{}%
@@ -1126,18 +978,12 @@
 \>[25]\AgdaSymbol{=}\AgdaSpace{}%
 \AgdaFunction{laterʳ⁻¹}\AgdaSpace{}%
 \AgdaBound{x∼ly}\<%
-\\
+\end{code} 
+%</inversas>
+
+%<*refl>
+\begin{code}%
 %
-\\[\AgdaEmptyExtraSkip]%
-\>[0]\AgdaComment{------------------------------------------------------------------------}\<%
-\\
-\>[0]\AgdaComment{-- The relations are equivalences or partial orders, given suitable}\<%
-\\
-\>[0]\AgdaComment{-- assumptions about the underlying relation}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-\>[0][@{}l@{\AgdaIndent{0}}]%
 \>[2]\AgdaKeyword{module}\AgdaSpace{}%
 \AgdaModule{Equivalence}\AgdaSpace{}%
 \AgdaKeyword{where}\<%
@@ -1145,11 +991,6 @@
 %
 \\[\AgdaEmptyExtraSkip]%
 \>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaComment{-- Reflexivity.}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
 \>[4]\AgdaFunction{refl}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaFunction{Reflexive}\AgdaSpace{}%
@@ -1185,14 +1026,11 @@
 \AgdaSymbol{(}\AgdaOperator{\AgdaCoinductiveConstructor{♯}}\AgdaSpace{}%
 \AgdaFunction{refl}\AgdaSpace{}%
 \AgdaBound{refl-∼}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[4]\AgdaComment{-- Symmetry.}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</refl>
+
+%<*sym>
+\begin{code}%
 %
 \>[4]\AgdaFunction{sym}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1263,14 +1101,23 @@
 \AgdaBound{eq}%
 \>[66]\AgdaBound{x≈y}\AgdaSpace{}%
 \AgdaSymbol{)}\<%
-\\
+\end{code}
+%</sym>
+
+%<*symabs>
+\begin{code}%
 %
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[4]\AgdaComment{-- Transitivity.}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\>[4]\AgdaFunction{sym}\AgdaSpace{}%
+\AgdaBound{sym-∼}\AgdaSpace{}%
+\AgdaSymbol{()}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaInductiveConstructor{laterˡ}\AgdaSpace{}%
+\AgdaSymbol{\{}\AgdaInductiveConstructor{geq}\AgdaSymbol{\}}%
+\>[32]\AgdaBound{x≳y}\AgdaSymbol{)}\<%
+\end{code}
+%</symabs> 
+
+%<*trans>
+\begin{code}%
 %
 \>[4]\AgdaKeyword{private}\<%
 \\
@@ -1288,7 +1135,7 @@
 \>[5][@{}l@{\AgdaIndent{0}}]%
 \>[6]\AgdaFunction{now-trans}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[737I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[678I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{k}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{y}\AgdaSymbol{\}}\AgdaSpace{}%
@@ -1297,7 +1144,7 @@
 \AgdaBound{A}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[737I]%
+\>[.][@{}l@{}]\<[678I]%
 \>[18]\AgdaDatatype{Rel}\AgdaSpace{}%
 \AgdaBound{k}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
@@ -1359,7 +1206,7 @@
 \>[6][@{}l@{\AgdaIndent{0}}]%
 \>[8]\AgdaFunction{later-trans}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[780I]\AgdaSymbol{∀}\AgdaSpace{}%
+\>[721I]\AgdaSymbol{∀}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{k}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{\{}\AgdaBound{x}\AgdaSpace{}%
 \AgdaBound{y}\AgdaSpace{}%
@@ -1369,7 +1216,7 @@
 \AgdaSymbol{\{}\AgdaBound{z}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\<%
 \\
-\>[.][@{}l@{}]\<[780I]%
+\>[.][@{}l@{}]\<[721I]%
 \>[22]\AgdaDatatype{Rel}\AgdaSpace{}%
 \AgdaBound{k}\AgdaSpace{}%
 \AgdaBound{x}\AgdaSpace{}%
@@ -1501,356 +1348,11 @@
 \AgdaKeyword{public}\AgdaSpace{}%
 \AgdaKeyword{using}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaFunction{trans}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaComment{-- All the relations are preorders.}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaFunction{preorder}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaRecord{IsPreorder}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}≡\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaOperator{\AgdaBound{\AgdaUnderscore{}∼\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Kind}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaRecord{Preorder}\AgdaSpace{}%
-\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaSymbol{\AgdaUnderscore{}}\<%
-\\
-%
-\>[2]\AgdaFunction{preorder}\AgdaSpace{}%
-\AgdaBound{pre}\AgdaSpace{}%
-\AgdaBound{k}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaKeyword{record}\<%
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaField{Carrier}%
-\>[17]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⊥}}\<%
-\\
-%
-\>[4]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{\AgdaUnderscore{}≈\AgdaUnderscore{}}}%
-\>[17]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{\AgdaUnderscore{}≡\AgdaUnderscore{}}}\<%
-\\
-%
-\>[4]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{\AgdaUnderscore{}∼\AgdaUnderscore{}}}%
-\>[17]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaDatatype{Rel}\AgdaSpace{}%
-\AgdaBound{k}\<%
-\\
-%
-\>[4]\AgdaSymbol{;}%
-\>[891I]\AgdaField{isPreorder}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaKeyword{record}\<%
-\\
-\>[.][@{}l@{}]\<[891I]%
-\>[6]\AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaField{isEquivalence}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{P.isEquivalence}\<%
-\\
-%
-\>[6]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaField{reflexive}%
-\>[22]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{refl′}\<%
-\\
-%
-\>[6]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaField{trans}%
-\>[22]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{Equivalence.trans}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaField{IsPreorder.trans}\AgdaSpace{}%
-\AgdaBound{pre}\AgdaSymbol{)}\<%
-\\
-%
-\>[6]\AgdaSymbol{\}}\<%
-\\
-%
-\>[4]\AgdaSymbol{\}}\<%
-\\
-%
-\>[4]\AgdaKeyword{where}\<%
-\\
-%
-\>[4]\AgdaFunction{refl′}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaSymbol{∀}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{k}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{x}\AgdaSpace{}%
-\AgdaBound{y}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⊥}}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{≡}}\AgdaSpace{}%
-\AgdaBound{y}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Rel}\AgdaSpace{}%
-\AgdaBound{k}\AgdaSpace{}%
-\AgdaBound{x}\AgdaSpace{}%
-\AgdaBound{y}\<%
-\\
-%
-\>[4]\AgdaFunction{refl′}\AgdaSpace{}%
-\AgdaInductiveConstructor{P.refl}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{Equivalence.refl}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{IsPreorder.refl}\AgdaSpace{}%
-\AgdaBound{pre}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaKeyword{private}\<%
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaFunction{preorder′}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaRecord{IsEquivalence}\AgdaSpace{}%
-\AgdaOperator{\AgdaBound{\AgdaUnderscore{}∼\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaDatatype{Kind}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaRecord{Preorder}\AgdaSpace{}%
-\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaSymbol{\AgdaUnderscore{}}\<%
-\\
-%
-\>[4]\AgdaFunction{preorder′}\AgdaSpace{}%
-\AgdaBound{equiv}\AgdaSpace{}%
-\AgdaSymbol{=}\<%
-\\
-\>[4][@{}l@{\AgdaIndent{0}}]%
-\>[6]\AgdaFunction{preorder}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{SetoidProperties.isPreorder}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaKeyword{record}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaField{isEquivalence}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{equiv}\AgdaSpace{}%
-\AgdaSymbol{\}))}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaComment{-- The two equalities are equivalence relations.}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaFunction{setoid}\AgdaSpace{}%
-\AgdaSymbol{:}%
-\>[945I]\AgdaRecord{IsEquivalence}\AgdaSpace{}%
-\AgdaOperator{\AgdaBound{\AgdaUnderscore{}∼\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{→}\<%
-\\
-\>[.][@{}l@{}]\<[945I]%
-\>[11]\AgdaSymbol{(}\AgdaBound{k}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaDatatype{Kind}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{eq}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaFunction{Equality}\AgdaSpace{}%
-\AgdaBound{k}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaRecord{Setoid}\AgdaSpace{}%
-\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaSymbol{\AgdaUnderscore{}}\<%
-\\
-%
-\>[2]\AgdaFunction{setoid}\AgdaSpace{}%
-\AgdaBound{equiv}\AgdaSpace{}%
-\AgdaBound{k}\AgdaSpace{}%
-\AgdaSymbol{\{}\AgdaBound{eq}\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaKeyword{record}\<%
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaField{Carrier}%
-\>[21]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⊥}}\<%
-\\
-%
-\>[4]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{\AgdaUnderscore{}≈\AgdaUnderscore{}}}%
-\>[21]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaDatatype{Rel}\AgdaSpace{}%
-\AgdaBound{k}\<%
-\\
-%
-\>[4]\AgdaSymbol{;}%
-\>[969I]\AgdaField{isEquivalence}%
-\>[21]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaKeyword{record}\<%
-\\
-\>[.][@{}l@{}]\<[969I]%
-\>[6]\AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaField{refl}%
-\>[15]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{Pre.refl}\<%
-\\
-%
-\>[6]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaField{sym}%
-\>[15]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{Equivalence.sym}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaField{IsEquivalence.sym}\AgdaSpace{}%
-\AgdaBound{equiv}\AgdaSymbol{)}\AgdaSpace{}%
-\AgdaBound{eq}\<%
-\\
-%
-\>[6]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaField{trans}%
-\>[15]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{Pre.trans}\<%
-\\
-%
-\>[6]\AgdaSymbol{\}}\<%
-\\
-%
-\>[4]\AgdaSymbol{\}}\AgdaSpace{}%
-\AgdaKeyword{where}\AgdaSpace{}%
-\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{Pre}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaModule{Preorder}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{preorder′}\AgdaSpace{}%
-\AgdaBound{equiv}\AgdaSpace{}%
-\AgdaBound{k}\AgdaSymbol{)}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaComment{-- The order is a partial order, with strong equality as the}\<%
-\\
-%
-\>[2]\AgdaComment{-- underlying equality.}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
-%
-\>[2]\AgdaFunction{≳-poset}\AgdaSpace{}%
-\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaRecord{IsEquivalence}\AgdaSpace{}%
-\AgdaOperator{\AgdaBound{\AgdaUnderscore{}∼\AgdaUnderscore{}}}\AgdaSpace{}%
-\AgdaSymbol{→}\AgdaSpace{}%
-\AgdaRecord{Poset}\AgdaSpace{}%
-\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaSymbol{\AgdaUnderscore{}}\AgdaSpace{}%
-\AgdaSymbol{\AgdaUnderscore{}}\<%
-\\
-%
-\>[2]\AgdaFunction{≳-poset}\AgdaSpace{}%
-\AgdaBound{equiv}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaKeyword{record}\<%
-\\
-\>[2][@{}l@{\AgdaIndent{0}}]%
-\>[4]\AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaField{Carrier}%
-\>[22]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaBound{A}\AgdaSpace{}%
-\AgdaOperator{\AgdaDatatype{⊥}}\<%
-\\
-%
-\>[4]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{\AgdaUnderscore{}≈\AgdaUnderscore{}}}%
-\>[22]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≅\AgdaUnderscore{}}}\<%
-\\
-%
-\>[4]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaOperator{\AgdaField{\AgdaUnderscore{}≤\AgdaUnderscore{}}}%
-\>[22]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaOperator{\AgdaFunction{\AgdaUnderscore{}≳\AgdaUnderscore{}}}\<%
-\\
-%
-\>[4]\AgdaSymbol{;}%
-\>[1006I]\AgdaField{isPartialOrder}%
-\>[22]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaKeyword{record}\<%
-\\
-\>[.][@{}l@{}]\<[1006I]%
-\>[6]\AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaField{antisym}%
-\>[20]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{antisym}\<%
-\\
-%
-\>[6]\AgdaSymbol{;}%
-\>[1010I]\AgdaField{isPreorder}%
-\>[20]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaKeyword{record}\<%
-\\
-\>[.][@{}l@{}]\<[1010I]%
-\>[8]\AgdaSymbol{\{}\AgdaSpace{}%
-\AgdaField{isEquivalence}%
-\>[25]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{S.isEquivalence}\<%
-\\
-%
-\>[8]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaField{reflexive}%
-\>[25]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{≅⇒}\<%
-\\
-%
-\>[8]\AgdaSymbol{;}\AgdaSpace{}%
-\AgdaField{trans}%
-\>[25]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaFunction{Pre.trans}\<%
-\\
-%
-\>[8]\AgdaSymbol{\}}\<%
-\\
-%
-\>[6]\AgdaSymbol{\}}\<%
-\\
-%
-\>[4]\AgdaSymbol{\}}\<%
-\\
-%
-\>[4]\AgdaKeyword{where}\<%
-\\
-%
-\>[4]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{S}%
-\>[15]\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaModule{Setoid}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{setoid}\AgdaSpace{}%
-\AgdaBound{equiv}\AgdaSpace{}%
-\AgdaInductiveConstructor{strong}\AgdaSymbol{)}\<%
-\\
-%
-\>[4]\AgdaKeyword{module}\AgdaSpace{}%
-\AgdaModule{Pre}\AgdaSpace{}%
-\AgdaSymbol{=}\AgdaSpace{}%
-\AgdaModule{Preorder}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaFunction{preorder′}\AgdaSpace{}%
-\AgdaBound{equiv}\AgdaSpace{}%
-\AgdaSymbol{(}\AgdaInductiveConstructor{other}\AgdaSpace{}%
-\AgdaInductiveConstructor{geq}\AgdaSymbol{))}\<%
-\\
-%
-\\[\AgdaEmptyExtraSkip]%
+\end{code}
+%</trans>
+
+%<*antisym>
+\begin{code}%
 %
 \>[4]\AgdaFunction{antisym}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1942,4 +1444,4 @@
 \AgdaSymbol{(}\AgdaFunction{laterʳ⁻¹}\AgdaSpace{}%
 \AgdaBound{x≲ly}\AgdaSymbol{))}\<%
 \end{code}
-%</lemas>
+%</antisym>
