--- a/doc/latex/Structures.tex
+++ b/doc/latex/Structures.tex
@@ -548,7 +548,7 @@
 \\
 \>[2][@{}l@{\AgdaIndent{0}}]%
 \>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -557,13 +557,13 @@
 \\
 %
 \>[4]\AgdaField{eqₘ}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaRecord{IsEquivalence}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}\<%
 \\
 %
 \>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}≲ₘ\AgdaUnderscore{}}}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -571,20 +571,20 @@
 \AgdaPrimitiveType{Set}\<%
 \\
 %
-\>[4]\AgdaField{porderₘ}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
-\AgdaRecord{IsPreorder}\AgdaSpace{}%
+\>[4]\AgdaField{porderₘ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaRecord{IsPartialOrder}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{\AgdaUnderscore{}≅ₘ\AgdaUnderscore{}}}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{\AgdaUnderscore{}≲ₘ\AgdaUnderscore{}}}\<%
 \\
 %
 \>[4]\AgdaField{zeroₘ}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\<%
 \\
 %
 \>[4]\AgdaOperator{\AgdaField{\AgdaUnderscore{}+ₘ\AgdaUnderscore{}}}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -592,8 +592,34 @@
 \AgdaBound{M}\<%
 \\
 %
+\>[4]\AgdaField{scomp≲ₘ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSpace{}%
+\AgdaBound{z}\AgdaSpace{}%
+\AgdaBound{w}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaBound{z}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaBound{w}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{+ₘ}}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{z}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{+ₘ}}\AgdaSpace{}%
+\AgdaBound{w}\AgdaSymbol{)}\<%
+\\
+%
 \>[4]\AgdaField{sidl}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -606,7 +632,7 @@
 \\
 %
 \>[4]\AgdaField{sidr}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -619,7 +645,7 @@
 \\
 %
 \>[4]\AgdaField{sassoc}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -644,7 +670,7 @@
 \\
 %
 \>[4]\AgdaField{maxₘ}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSpace{}%
@@ -652,8 +678,34 @@
 \AgdaBound{M}\<%
 \\
 %
+\>[4]\AgdaField{mcomp≲ₘ}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSpace{}%
+\AgdaBound{z}\AgdaSpace{}%
+\AgdaBound{w}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaBound{z}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaBound{w}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≲ₘ}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
+\AgdaBound{z}\AgdaSpace{}%
+\AgdaBound{w}\AgdaSymbol{)}\<%
+\\
+%
 \>[4]\AgdaField{midl}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -666,7 +718,7 @@
 \\
 %
 \>[4]\AgdaField{midr}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -679,7 +731,7 @@
 \\
 %
 \>[4]\AgdaField{massoc}%
-\>[13]\AgdaSymbol{:}\AgdaSpace{}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
@@ -703,9 +755,25 @@
 \AgdaBound{z}\AgdaSymbol{)))}\<%
 \\
 %
-\>[4]\AgdaField{ichange}%
-\>[13]\AgdaSymbol{:}%
-\>[454I]\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\>[4]\AgdaField{mcomm}%
+\>[12]\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSpace{}%
+\AgdaSymbol{:}\AgdaSpace{}%
+\AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaSymbol{→}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSymbol{)}\AgdaSpace{}%
+\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
+\AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
+\AgdaBound{y}\AgdaSpace{}%
+\AgdaBound{x}\AgdaSymbol{)}\<%
+\\
+%
+\>[4]\AgdaField{ichange}\AgdaSpace{}%
+\AgdaSymbol{:}%
+\>[514I]\AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{y}\AgdaSpace{}%
@@ -718,8 +786,8 @@
 \AgdaSymbol{:}\AgdaSpace{}%
 \AgdaBound{M}\AgdaSymbol{)}\<%
 \\
-\>[454I][@{}l@{\AgdaIndent{0}}]%
-\>[17]\AgdaSymbol{→}\AgdaSpace{}%
+\>[514I][@{}l@{\AgdaIndent{0}}]%
+\>[16]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{maxₘ}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{x}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{+ₘ}}\AgdaSpace{}%
@@ -901,7 +969,7 @@
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{:}%
-\>[592I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
+\>[652I]\AgdaPrimitiveType{Set}\AgdaSymbol{\}}\AgdaSpace{}%
 \AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{t}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -920,7 +988,7 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSymbol{)}\<%
 \\
-\>[592I][@{}l@{\AgdaIndent{0}}]%
+\>[652I][@{}l@{\AgdaIndent{0}}]%
 \>[29]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaBound{t}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
@@ -1022,7 +1090,7 @@
 \>[4]\AgdaField{assoc}%
 \>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[690I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[750I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaSymbol{:}\AgdaSpace{}%
@@ -1041,7 +1109,7 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[690I]%
+\>[.][@{}l@{}]\<[750I]%
 \>[17]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{((}\AgdaField{merge}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
@@ -1056,14 +1124,14 @@
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{→}%
-\>[721I]\AgdaField{return}\AgdaSpace{}%
+\>[781I]\AgdaField{return}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
 \AgdaOperator{\AgdaInductiveConstructor{,}}\AgdaSpace{}%
 \AgdaBound{c}\AgdaSymbol{))\}))}\<%
 \\
-\>[.][@{}l@{}]\<[721I]%
+\>[.][@{}l@{}]\<[781I]%
 \>[65]\AgdaOperator{\AgdaField{≅ₘ}}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
@@ -1075,7 +1143,7 @@
 \>[4]\AgdaField{ichange}%
 \>[13]\AgdaSymbol{:}\AgdaSpace{}%
 \AgdaSymbol{∀}%
-\>[733I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
+\>[793I]\AgdaSymbol{\{}\AgdaBound{A}\AgdaSpace{}%
 \AgdaBound{B}\AgdaSpace{}%
 \AgdaBound{C}\AgdaSpace{}%
 \AgdaBound{D}\AgdaSpace{}%
@@ -1103,10 +1171,10 @@
 \AgdaBound{M}\AgdaSpace{}%
 \AgdaBound{D}\AgdaSymbol{)}\<%
 \\
-\>[.][@{}l@{}]\<[733I]%
+\>[.][@{}l@{}]\<[793I]%
 \>[17]\AgdaSymbol{→}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaField{merge}%
-\>[761I]\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
+\>[821I]\AgdaSymbol{(}\AgdaBound{a}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≫=}}\AgdaSpace{}%
 \AgdaBound{f}\AgdaSymbol{)}\AgdaSpace{}%
 \AgdaSymbol{(}\AgdaBound{b}\AgdaSpace{}%
@@ -1114,7 +1182,7 @@
 \AgdaBound{g}\AgdaSymbol{))}\AgdaSpace{}%
 \AgdaOperator{\AgdaField{≲ₘ}}\<%
 \\
-\>[761I][@{}l@{\AgdaIndent{0}}]%
+\>[821I][@{}l@{\AgdaIndent{0}}]%
 \>[27]\AgdaSymbol{((}\AgdaField{merge}\AgdaSpace{}%
 \AgdaBound{a}\AgdaSpace{}%
 \AgdaBound{b}\AgdaSymbol{)}\AgdaSpace{}%
