--- a/doc/tex/casodelay.tex
+++ b/doc/tex/casodelay.tex
@@ -33,7 +33,7 @@ Como se puede ver, la definición de esta función es muy sencilla. Para los cas
 
 Una vez introducido el tipo \AgdaDatatype{Kind}, se definen las relaciones propiamente dichas. Esto se realiza mediante la creación de un módulo llamado \AgdaModule{Equality}, el cual toma como parámetros un conjunto \AgdaBound{A} \AgdaSymbol{:} \AgdaPrimitiveType{Set}, que será el tipo de retorno, y una relación \AgdaBound{$\_\sim\_$} \AgdaSymbol{:} \AgdaBound{A} \AgdaSymbol{$\rightarrow$} \AgdaBound{A} \AgdaSymbol{$\rightarrow$} \AgdaPrimitiveType{Set} que establece una noción de igualdad entre valores de tipo \AgdaBound{A}. 
 
-\ExecuteMetaData[latex/Delay.tex]{modequality}
+\ExecuteMetaData[latex/Delay.tex]{rel}
 
 Las relaciones se definen a través del tipo \AgdaDatatype{Rel}, el cual toma como parámetro un \AgdaDatatype{Kind} que indica qué tipo de relación es y dos valores de tipo \AgdaBound{A} \AgdaDatatype{$\bot$}, los cuales va a comparar mediante la relación correspondiente. El tipo \AgdaDatatype{Rel} tiene cuatro constructores:
 \begin{itemize}[noitemsep]
@@ -50,13 +50,49 @@ En el uso que permite cada constructor se puede ver que la relación de tipo \Ag
 
 Luego del tipo \AgdaDatatype{Rel} se definen los operadores \AgdaFunction{$\cong$}, \AgdaFunction{$\gtrsim$}, \AgdaFunction{$\lesssim$} y \AgdaFunction{$\approx$}, los cuales representan la bisemejanza fuerte, la desigualdad (mayor o igual), la desigualdad invertida (menor o igual) y la bisemejanza débil, respectivamente. 
 
-A continuación de esto se definen otros operadores que tienen que ver con la noción de convergencia dada por la definición \ref{def:convergencia}. \AgdaBound{x} \AgdaFunction{$\Downarrow$[} \AgdaBound{k} \AgdaFunction{]} \AgdaBound{y} indica que \AgdaBound{x} se relaciona mediante la relación \AgdaBound{k} con (\AgdaInductiveConstructor{now} \AgdaBound{y}). En el caso especial de que la relación sea bisemejanza débil, se escribe \AgdaBound{x} \AgdaFunction{$\Downarrow$} \AgdaBound{y} y se dice que \AgdaBound{x} converge al valor \AgdaBound{y} \AgdaSymbol{:} \AgdaBound{A}. Por otro lado, \AgdaBound{x} \AgdaFunction{$\Downarrow$} indica que la computación \AgdaBound{x} termina, es decir que existe algún valor \AgdaBound{v} tal que \AgdaBound{x} \AgdaFunction{$\Downarrow$} \AgdaBound{v}. Por último, \AgdaBound{x} \AgdaFunction{$\Uparrow$[} \AgdaBound{k} \AgdaFunction{]} indica que \AgdaBound{x} se relaciona con el valor especial \AgdaFunction{never} mediante la relación \AgdaBound{k}. En el caso de que esa relación sea (\AgdaInductiveConstructor{other weak}) se escribe \AgdaBound{x} \AgdaFunction{$\Uparrow$} y se dice que la computación \AgdaBound{x} no termina.
+\ExecuteMetaData[latex/Delay.tex]{op}
 
-Luego de dar todas las definiciones, se prueba que ambas bisemejanzas son relaciones de equivalencia y que la desigualdad es un orden parcial. Antes de poder demostrar esto, se prueba un conjunto de lemas que serán de utilidad para tal propósito. Todas estas pruebas se sitúan dentro de un módulo sin nombre parametrizado con el conjunto \AgdaBound{A} de retorno y su relación de igualdad. Esto se hace para fijar tal conjunto y su relación y poder utilizarlos a lo largo de todas las demostraciones. {\color{red} Vale la pena pegar todo el choclo de demostraciones y explicar una por una?}
+A continuación, se definen otros operadores que tienen que ver con la noción de convergencia introducida en la definición \ref{def:convergencia}. 
+
+\ExecuteMetaData[latex/Delay.tex]{convergencia}
+
+\AgdaBound{x} \AgdaFunction{$\Downarrow$[} \AgdaBound{k} \AgdaFunction{]} \AgdaBound{y} indica que \AgdaBound{x} se relaciona mediante la relación \AgdaBound{k} con (\AgdaInductiveConstructor{now} \AgdaBound{y}). En el caso especial de que la relación sea bisemejanza débil, se escribe \AgdaBound{x} \AgdaFunction{$\Downarrow$} \AgdaBound{y} y se dice que \AgdaBound{x} converge al valor \AgdaBound{y} \AgdaSymbol{:} \AgdaBound{A}. Por otro lado, \AgdaBound{x} \AgdaFunction{$\Downarrow$} indica que la computación \AgdaBound{x} termina, es decir que existe algún valor \AgdaBound{v} tal que \AgdaBound{x} \AgdaFunction{$\Downarrow$} \AgdaBound{v}. Por último, \AgdaBound{x} \AgdaFunction{$\Uparrow$[} \AgdaBound{k} \AgdaFunction{]} indica que \AgdaBound{x} se relaciona con el valor especial \AgdaFunction{never} mediante la relación \AgdaBound{k}. En el caso de que esa relación sea (\AgdaInductiveConstructor{other weak}) se escribe \AgdaBound{x} \AgdaFunction{$\Uparrow$} y se dice que la computación \AgdaBound{x} no termina.
+
+Luego de dar todas las definiciones, se prueba que las tres relaciones son reflexivas y transitivas y que las bisemejanzas son simétricas mientras que la desigualdad es antisimétrica. Antes de poder demostrar esto, se prueba un conjunto de lemas que serán de utilidad para tal propósito. Todas estas pruebas se sitúan dentro de un módulo sin nombre parametrizado con el conjunto \AgdaBound{A} de retorno y su relación de igualdad. Esto se hace para fijar tal conjunto y su relación y poder utilizarlos a lo largo de todas las demostraciones.
 
 \ExecuteMetaData[latex/Delay.tex]{lemas}
 
+El lema \AgdaFunction{$\cong\Rightarrow$} demuestra que todas las relaciones incluyen a la bisemejanza fuerte, es decir que si dos términos \AgdaBound{x y} \AgdaSymbol{:} \AgdaBound{A} \AgdaDatatype{$\bot$} son fuertemente bisemejantes, entonces también son débilmente bisemejantes y, además, \AgdaBound{x} \AgdaFunction{$\gtrsim$} \AgdaBound{y}. De manera similar, el segundo lema, \AgdaFunction{$\gtrsim\Rightarrow$}, postula que la desigualdad está incluída en la bisemejanza débil. Si \AgdaBound{x} \AgdaFunction{$\gtrsim$} \AgdaBound{y}, entonces \AgdaBound{x} e \AgdaBound{y} son débilmente bisemejantes. Por último, el lema \AgdaFunction{$\Rightarrow\approx$} indica que todas las relaciones están incluídas en la bisemejanza débil. Si \AgdaBound{x} e \AgdaBound{y} se relacionan mediante cualquier tipo de relación \AgdaBound{k}, entonces también se relacionan por la bisemejanza débil. 
 
+Las definiciones que siguen representan las operaciones inversas de los constructores \AgdaInductiveConstructor{later$^r$}, \AgdaInductiveConstructor{later$^l$} y \AgdaInductiveConstructor{later}. Así como estos constructores permiten ``agregar demoras'' a uno y otro lado de las ecuaciones, sus operaciones inversas permiten ``quitar demoras'' para ciertos tipos de relaciones. 
+
+\ExecuteMetaData[latex/Delay.tex]{inversas}
+
+La función \AgdaFunction{later$^{r-1}$} permite sacar un constructor \AgdaInductiveConstructor{later} del lado derecho de una ecuación que tenga como operador a la desigualdad o la bisemejanza débil. Si se tiene \hbox{\AgdaDatatype{Rel} (\AgdaInductiveConstructor{other} \AgdaBound{k}) \AgdaBound{x} (\AgdaInductiveConstructor{later} \AgdaBound{y})}, para algún tipo \AgdaBound{k} \AgdaSymbol{:} \AgdaDatatype{OtherKind} y algún par de términos \AgdaBound{x} \AgdaSymbol{:} \AgdaBound{A} \AgdaDatatype{$\bot$} e \AgdaBound{y} \AgdaSymbol{:} \AgdaFunction{$\infty$} (\AgdaBound{A} \AgdaDatatype{$\bot$}), entonces se tiene que \AgdaBound{x} se relaciona por el mismo tipo de relación \AgdaBound{k} con (\AgdaField{$\flat$} \AgdaBound{y}). La función \AgdaFunction{later$^{l-1}$}, de manera análoga, permite quitar un constructor \AgdaInductiveConstructor{later} del lado izquierdo de la ecuación, pero sólo para el caso de la bisemejanza débil. Esto implica que si se tiene \AgdaInductiveConstructor{later} \AgdaBound{x} \AgdaFunction{$\approx$} \AgdaBound{y}, entonces también se cumple que \AgdaField{$\flat$} \AgdaBound{x} \AgdaFunction{$\approx$} \AgdaBound{y}. Por último, la función \AgdaFunction{later$^{-1}$} permite quitar el constructor  \AgdaInductiveConstructor{later} de ambos lados de la ecuación. Esto puede realizarse para cualquier tipo de relación \AgdaBound{k} \AgdaSymbol{:} \AgdaDatatype{Kind}.
+
+Teniendo en cuenta todos estos lemas se pueden probar finalmente las propiedades que cumplen las relaciones definidas. Para poder realizar estas demostraciones se asumen las propiedades análogas para la relación subyacente \AgdaFunction{$\_\sim\_$} sobre el conjunto de retorno \AgdaBound{A}. Se realizan dichas pruebas dentro de un módulo llamado \AgdaModule{Equivalence} que las encapsula para luego importarlas todas juntas cuando sean necesarias. 
+
+\ExecuteMetaData[latex/Delay.tex]{refl}
+
+La reflexividad se prueba para cualquier tipo de relación \AgdaBound{k} \AgdaSymbol{:} \AgdaDatatype{Kind}. Se pide como condición una prueba de que la relación subyacente \AgdaFunction{$\_\sim\_$} es también reflexiva. Tanto la prueba argumento como la prueba que se retorna están dadas por un término de tipo \AgdaFunction{Reflexive} definido en el módulo \href{https://agda.github.io/agda-stdlib/Relation.Binary.Definitions.html}{\AgdaModule{Relation.Binary.Definitions}}. Este es una función que toma una relación binaria \AgdaBound{$\_\sim\_$} y devuelve el tipo correspondiente a la prueba de que dicha relación es reflexiva, es decir $\forall$ \{\AgdaBound{x}\} $\rightarrow$ \AgdaBound{x $\sim$ x}. De manera análoga, la prueba de simetría se da mediante un término de tipo \AgdaFunction{Symmetric} que, dada una relación, devuelve el tipo de la prueba que indica que tal relación es simétrica.
+
+\ExecuteMetaData[latex/Delay.tex]{sym}
+
+La prueba de simetría requiere, además de la prueba de que la relación subyacente \AgdaFunction{$\_\sim\_$} es simétrica, una prueba de que el tipo de relación \AgdaBound{k} : \AgdaDatatype{Kind} es una igualdad. Esta se da mediante el predicado \AgdaFunction{Equality} definido más arriba, que es verdadero para ambas bisemejanzas y falso para la desigualdad. Puede parecer a simple vista que esta prueba no es utilizada para demostrar la simetría. Sin embargo, es la presencia de la misma la que hace que no se requiera analizar el caso (\AgdaInductiveConstructor{later$^l$} \{\AgdaInductiveConstructor{geq}\} \AgdaBound{x$\gtrsim$y}) y la prueba aún así sea exhaustiva. Para verlo más claramente se puede agregar este caso, donde se reemplaza la prueba \AgdaBound{eq} por el patrón absurdo, haciendo que no sea necesario dar la definición correspondiente:
+ 
+\ExecuteMetaData[latex/Delay.tex]{symabs}
+
+La transitividad se prueba, al igual que la reflexividad, para todos los tipos de relación \AgdaBound{k}. Esta demostración es un poco más compleja y requiere de tres pruebas separadas que luego se unen. Es por esta razón que se crea un módulo privado \AgdaModule{Trans} que contenga todas las partes de la prueba dentro, donde luego sólo se exporta públicamente la función \AgdaFunction{trans} que constituye la prueba final. Este módulo toma como parámetro una prueba \AgdaBound{trans-$\sim$} de tipo \AgdaFunction{Transitive} \AgdaBound{$\_\sim\_$} que postula la transitividad de la relación subyacente. 
+
+\ExecuteMetaData[latex/Delay.tex]{trans}
+
+La transitividad postula que, dados tres términos \AgdaBound{x}, \AgdaBound{y} y \AgdaBound{z}, si se tienen las relaciones \AgdaDatatype{Rel} \AgdaBound{k x y} y \AgdaDatatype{Rel} \AgdaBound{k y z}, entonces se debe tener también la relación \AgdaDatatype{Rel} \AgdaBound{k x z}. Para demostrar esto, se necesitan dos pruebas auxiliares: \AgdaFunction{now-trans} que prueba esto asumiendo \AgdaBound{z} $=$ (\AgdaInductiveConstructor{now} \AgdaBound{v}) para algún \AgdaBound{v} $:$ \AgdaBound{A} y \AgdaFunction{later-trans} que hace lo mismo para el caso en que \AgdaBound{z} $=$ (\AgdaInductiveConstructor{later} \AgdaBound{z}). Esta última y la prueba principal \AgdaFunction{trans} son mutuamente recursivas y, por lo tanto, se sitúan dentro de un bloque \AgdaKeyword{mutual}.
+
+Se introduce por último la prueba de antisimetría de la relación de desigualdad. Esta postula que, dados dos términos \AgdaBound{x y} $:$ \AgdaBound{A} \AgdaDatatype{$\bot$}, si se tiene que \AgdaBound{x} \AgdaFunction{$\gtrsim$} \AgdaBound{y} y \AgdaBound{x} \AgdaFunction{$\lesssim$} \AgdaBound{y}, luego \AgdaBound{x} \AgdaFunction{$\cong$} \AgdaBound{y}, es decir que \AgdaBound{x} e \AgdaBound{y} son fuertemente bisemejantes.
+
+\ExecuteMetaData[latex/Delay.tex]{antisym}
+
+Podría darse también la prueba de antisimetría respecto de la bisemejanza débil, pero esta es trivial puesto que, como se indica en el lema \AgdaFunction{$\gtrsim\Rightarrow$}, basta con sólo una de las relaciones de desigualdad para que \AgdaBound{x} e \AgdaBound{y} sean débilmente bisemejantes. Las pruebas de antisimetría en general tienen sentido cuando la igualdad está incluida en la relación de orden, y no al revés.
 
 
 \section{Prueba de que el tipo \textit{delay} es una mónada}
